--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>shaheennrd</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
