--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="flex items-center justify-between">
             <div class="left flex items-center">
                 <div class="branding">
-                    <img src="./images/brand.png" alt="">
+                    <img src="brand.png" alt="">
                 </div>
                 <div>
                     <a href="#">Home</a>
@@ -33,7 +33,7 @@
         </nav>
            <div class="hero flex items-center justify-between">
                <div class="left flex-1 flex justify-center">
-               <img src="./images/me.jpg.jpg" alt="">
+               <img src="me.jpg.jpg" alt="">
                </div>
                <div class="right flex-1">
                    <h6>Shaheennrd</h6>
@@ -48,7 +48,7 @@
     <section id="about" class="about">
         <div class="container flex items-center">
             <div class="flex-1">
-            <img class="about-me-img" src="images/model2.jpg" alt="">
+            <img class="about-me-img" src="model2.jpg" alt="">
         </div>
         <div class="flex-1">
             <h1>About <span> Me</span></h1>
@@ -191,7 +191,7 @@
         </div>
     </section>
     <footer>
-        <img class="footer-logo" src="./images/brand.png" alt="">
+        <img class="footer-logo" src="brand.png" alt="">
         <div class="footer-socials">
             <a href="https://www.instagram.com/shaheen_nrd/"><i class="fab fa-instagram icon"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100008222020461"><i class="fab fa-facebook icon"></i></a>
