--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
            <div class="hero flex items-center justify-between">
                <div class="left flex-1 flex justify-center">
-               <img src="me.jpg.jpg" alt="">
+               <img src="me.jpg" alt="">
                </div>
                <div class="right flex-1">
                    <h6>Shaheennrd</h6>
