--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="about" class="about">
         <div class="container flex items-center">
             <div class="flex-1">
-            <img class="about-me-img" src="model2.jpg" alt="">
+            <img class="about-me-img" src="me5.jpeg" alt="">
         </div>
         <div class="flex-1">
             <h1>About <span> Me</span></h1>
